# flutter_patcher

./: .gitignore  .pubignore  CHANGELOG-zh.md  CHANGELOG.md  LICENSE  README-zh.md  README.md  dartdoc_options.yaml  pubspec.yaml
android/: build.gradle  consumer-rules.pro  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  bsdiff_jni.c  bsdiff_jni.h  bsdiff_stub.c
android/src/main/kotlin/com/flutter_patcher/flutter_patcher/: ApplyResult.kt  BlacklistStore.kt  BootDiagnosticStore.kt  BsDiffBridge.kt  CrashGuard.kt  FlutterPatcherApplication.kt  FlutterPatcherAutoInitProvider.kt  FlutterPatcherPlugin.kt  LoaderHook.kt  PatchManager.kt  PatcherConfig.kt  SignatureVerifier.kt
android/src/test/kotlin/com/flutter_patcher/flutter_patcher/: PatchManagerTest.kt
doc/: api-reference.md  architecture.md  crash-guard.md  crash-protection.md
docs/: architecture.md  crash-guard.md
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/flutter_patcher/flutter_patcher_example/: MainActivity.kt
example/lib/: diag_card.dart  log_panel.dart  main.dart
example/test/: widget_test.dart
example/tools/: mock_server.dart
lib/: flutter_patcher.dart
lib/src/: blacklist.dart  boot_diagnostic.dart  io.dart  io_stub.dart  patch_info.dart  patcher_channel.dart
test/: flutter_patcher_test.dart  pack_cli_test.dart
